block header, block hero added

--- a/w-wave.html
+++ b/w-wave.html
@@ -1,11 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>W-Wave Radio</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="shortcut icon" href="/img/favicon.svg" type="image/svg+xml">
 </head>
 <body>
-    
+  <header>
+   <div>
+    <a href="#"><img src="/img/logo.svg" alt="Логотип Radio W-Wave"></a>
+    <nav>
+      <ul>
+        <li><a href="#Подкасты">Подкасты</a></li>
+        <li><a href="#Передачи">Передачи</a></li>
+        <li><a href="#Гости">Гости</a></li>
+        <li><a href="#Плейлисты">Плейлисты</a></li>
+        <li><a href="#О_нас">О нас</a></li>
+      </ul>
+    </nav>
+    <div>
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z" stroke="#6D31EE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M21 21L16.65 16.65" stroke="#6D31EE" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+    </div>
+   </div>
+   <section>
+    <div>
+    <h1>Радио W-Wave</h1>
+    <p>Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разоворном жанре.
+    Говорим о&nbsp;музыке, политике, истории, науке и&nbsp;культуре. Здесь, помимо прямого эфира&nbsp;&mdash; архив передач и&nbsp;многое другое:)</p>
+    <button>Слушать эфир</button>
+  </div>
+  <div>
+    <img src="/img/microphone.jpg" alt="Изображение микрофона">
+  </div>
+   </section>
+  </header>
+
+  <main>
+    <section>
+      <div>
+      <h2>Подкасты</h2>
+      <ul>
+        <li>
+          <div>
+            <img src="/img/img_1.jpg" alt="">
+
+          </div>
+          <div></div>
+        </li>
+        <li>
+          <div>
+            <img src="/img/img_2.jpg" alt="">
+          </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_3.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_4.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_5.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_6.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_7.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+        <li>
+           <div>
+            <img src="/img/img_8.jpg" alt="">
+           </div>
+          <div></div>
+        </li>
+      </ul>
+       </div>
+    </section>
+
+  </main>
+  <footer>
+
+  </footer>
+
 </body>
 </html>
