--- a/w-wave.html
+++ b/w-wave.html
@@ -125,75 +125,95 @@
     </section>
 
     <section class="broadcast">
-        <h2 class="broadcast__title section__title">Передачи</h2>
+      <div class="broadcast__container">
         <div class="broadcast__left">
+          <h2 class="broadcast__title section__title">Передачи</h2>
             <button class="broadcast__btn button btn-reset">Архив</button>
             <p class="broadcast__descr">В&nbsp;архив попадают все передачи, которые вы&nbsp;пропустили! Enjoy:)</p>
         </div>
-        <div>
+        <div class="broadcast__right">
          <ul class="broadcast__list flex list-reset">
             <li class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_1.jpg" alt="">
               <div class="broadcast__content">
                <h3 class="broadcast__subtitle">О людях и книгах</h3>
                <p class="broadcast__text">Анонсируется отдельно</p>
-               <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
-                </svg>
-                </a>
+               <div class="broadcast__box flex">
+               <a class="broadcast__link" href="#">Подробнее</a>
+                <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
+                  </svg>
+              </div>
                 </div>
             </li>
             <li  class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_2.jpg" alt="">
               <div class="broadcast__content">
               <h3 class="broadcast__subtitle">Графомания td</h3>
               <p class="broadcast__text">По понедельникам в 10:00</p>
-              <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
-                </svg>
-                </a>
+              <div class="broadcast__box flex">
+              <a class="broadcast__link" href="#">Подробнее</a>
+                <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
+                  </svg>
                 </div>
-            </li>
-            <li>
-              <div class="broadcast__content">
-              <h3>Не Рим, не Троя</h3>
-              <p class="broadcast__text">По вторникам в 12:00</p>
-              <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
-                </svg>
-                </a>
-                </div>
-            </li>
-            <li  class="broadcast__item">
-              <div class="broadcast__content">
-             <h3 class="broadcast__subtitle">Эрудит</h3>
-             <p class="broadcast__text">По пятницам в 17:00</p>
-             <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
-              </svg>
-              </a>
-            </div>
-            </li>
-            <li>
-              <div class="broadcast__content">
-              <h3 class="broadcast__subtitle">Тонкости эпох</h3>
-              <p class="broadcast__text">По субботам в 10:00</p>
-              <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
-                </svg>
-                </a>
                 </div>
             </li>
             <li class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_3.jpg" alt="">
+              <div class="broadcast__content">
+              <h3 class="broadcast__subtitle">Не Рим, не Троя</h3>
+              <p class="broadcast__text">По вторникам в 12:00</p>
+              <div class="broadcast__box flex">
+              <a class="broadcast__link" href="#">Подробнее</a>
+              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
+                </svg>
+                </div>
+                </div>
+            </li>
+            <li  class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_4.jpg">
+              <div class="broadcast__content">
+             <h3 class="broadcast__subtitle">Эрудит</h3>
+             <p class="broadcast__text">По пятницам в 17:00</p>
+             <div class="broadcast__box flex">
+             <a class="broadcast__link" href="#">Подробнее</a>
+             <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
+              </svg>
+              </div>
+            </div>
+            </li>
+            <li class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_5.jpg" alt="">
+              <div class="broadcast__content">
+              <h3 class="broadcast__subtitle">Тонкости эпох</h3>
+              <p class="broadcast__text">По субботам в 10:00</p>
+              <div class="broadcast__box flex">
+              <a class="broadcast__link" href="#">Подробнее</a>
+              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
+                </svg>
+              </div>
+                </div>
+            </li>
+            <li class="broadcast__item">
+              <img class="broadcast__img" src="/img/pic_6.jpg" alt="">
               <div class="broadcast__content">
               <h3 class="broadcast__subtitle">Живые мысли</h3>
               <p class="broadcast__text">По воскресеньям в 15:30</p>
-              <a class="broadcast__link" href="#">Подробнее<svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <div class="broadcast__box flex">
+              <a class="broadcast__link" href="#">Подробнее</a>
+              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z" fill="#121723"/>
                 </svg>
-                </a>
+                </div>
                 </div>
             </li>
          </ul>
         </div>
+      </div>
     </section>
 
      <section class="guest">
