--- a/w-wave.html
+++ b/w-wave.html
@@ -28,22 +28,23 @@
         </svg>
       </button>
    </div>
-   <section class="hero">
-    <div class="hero__container flex">
-    <div class="hero__left">
-    <h1 class="hero__title section__title">Радио <span class="hero__heading">W-Wave</span></h1>
-    <p class="hero__text section__text">Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разоворном жанре.
-    Говорим о&nbsp;музыке, политике, истории, науке и&nbsp;культуре. Здесь, помимо прямого эфира&nbsp;&mdash; архив передач и&nbsp;многое другое:)</p>
-    <button class="hero__btn button btn-reset">Слушать эфир</button>
-  </div>
-  <div class="hero__right">
-    <img class="hero__img" src="/img/microphone.jpg" alt="Изображение микрофона">
-  </div>
-  </div>
-   </section>
   </header>
 
-  <main>
+  <main class="main">
+    <section class="hero">
+      <div class="hero__container flex">
+      <div class="hero__left">
+      <h1 class="hero__title section__title">Радио <span class="hero__heading">W-Wave</span></h1>
+      <p class="hero__text section__text">Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разоворном жанре.
+      Говорим о&nbsp;музыке, политике, истории, науке и&nbsp;культуре. Здесь, помимо прямого эфира&nbsp;&mdash; архив передач и&nbsp;многое другое:)</p>
+      <button class="hero__btn button btn-reset">Слушать эфир</button>
+    </div>
+    <div class="hero__right">
+      <img class="hero__img" src="/img/microphone.jpg" alt="Изображение микрофона">
+    </div>
+    </div>
+     </section>
+
     <section class="podcast">
       <div class="podcast__container">
       <h2 class="podcast__title section__title">Подкасты</h2>
@@ -125,9 +126,10 @@
     </section>
 
     <section class="broadcast">
-      <div class="broadcast__container">
-        <div class="broadcast__left">
+      <div class="broadcast__container flex">
+        <div class="broadcast__left flex">
           <h2 class="broadcast__title section__title">Передачи</h2>
+          <img class="broadcast__pic" src="/img/mic.jpg" alt="">
             <button class="broadcast__btn button btn-reset">Архив</button>
             <p class="broadcast__descr">В&nbsp;архив попадают все передачи, которые вы&nbsp;пропустили! Enjoy:)</p>
         </div>
@@ -217,36 +219,44 @@
     </section>
 
      <section class="guest">
+      <div class="guest__container">
         <h2 class="guest__title section__title">Гости</h2>
        <p class="guest__heading">У&nbsp;нас бывают:</p>
        <p class="guest__text">Блогеры, арт-критики и&nbsp;деятели искусства, музыканты, молодые учёные и&nbsp;люди науки, историки, филологи и&nbsp;много других интересных гостей!</p>
        <ul class="guest__list flex list-reset">
-        <li class="guest__item">
+        <li class="guest__item flex">
           <img class="guest__img" src="/img/photo_1.jpg" alt="На фото Ольга Мартынова">
+          <div class="guest__content flex">
           <h3 class="guest__subtitle">Ольга Мартынова</h3>
           <p class="guest__descr">Российский искусствовед, арт-критик, куратор выставок, дизайнер, кандидат культурологии.
             Арт-критик газеты &laquo;Коммерсантъ&raquo;. Ведёт активную блогерскую деятельность как куратор музея &laquo;Гараж&raquo;, коим является с&nbsp;2016&nbsp;года.</p>
             <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+          </div>
         </li>
-        <li class="guest__item">
+        <li class="guest__item flex">
           <img class="guest__img" src="/img/photo_2.jpg" alt="На фото Денис Гришин">
+          <div class="guest__content flex">
           <h3 class="guest__subtitle">Денис Гришин</h3>
           <p class="guest__descr">Однозначно, элементы политического процесса являются только методом политического участия и&nbsp;смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершённой неузнаваемости,
           из-за чего возрастает их&nbsp;статус бесполезности.</p>
           <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+        </div>
         </li>
-        <li class="guest__item">
+        <li class="guest__item flex">
           <img class="guest__img" src="/img/photo_3.jpg" alt="На фото Ольга Мартынова">
+          <div class="guest__content flex">
           <h3 class="guest__subtitle">Ольга Мартынова</h3>
           <p class="guest__descr">С&nbsp;другой стороны, высококачественный прототип будущего проекта выявляет срочную потребность дальнейших направлений развития.
             В&nbsp;рамках спецификации современных стандартов, реплицированные с&nbsp;зарубежных источников.</p>
             <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+          </div>
         </li>
        </ul>
+      </div>
      </section>
 
      <section class="playlist">
-     <div class="playlist__container">
+     <div class="playlist__container flex">
       <div class="playlist__left">
         <h2 class="playlist__title section__title">Плейлисты</h2>
         <p class="playlist__text">Раздел &laquo;Плейлисты&raquo; может содержать информацию, не&nbsp;предназначенную для несовершеннолетних</p>
@@ -256,7 +266,7 @@
           <rect x="0.5" y="0.5" width="29" height="29" rx="14.5" stroke="#A1A6B4"/>
           </svg>
       </div>
-      <div>
+      <div class="playlist__right">
         <ul class="playlist__list flex list-reset">
           <li class="playlist__item">
             <img class="playlist__img" src="/img/01_photo.jpg" alt="">
@@ -468,16 +478,17 @@
      </section>
 
      <section class="radio">
+      <div class="radio__container flex">
        <div class="radio__left">
-        <img class="radio__img" src="/img/radio.jpg" alt="Изображение радио">
-        <svg class="radio__svg" width="160" height="160" viewBox="0 0 160 160" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <img class="radio__img" src="/img/radio.png" alt="Изображение радио">
+        <svg class="radio__svg-new" width="160" height="160" viewBox="0 0 160 160" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M151.975 89.6127C156.622 84.0465 156.622 75.9535 151.975 70.3873L146.225 63.4986C143.682 60.4529 142.45 56.5239 142.797 52.5716L143.592 43.5358C144.244 36.1224 139.362 29.3519 132.122 27.629L124.848 25.8981C120.783 24.9308 117.306 22.3119 115.254 18.6722L111.455 11.933C107.645 5.17474 99.3097 2.43713 92.2345 5.62002L86.1539 8.35543C82.2402 10.116 77.7598 10.116 73.8461 8.35543L67.7488 5.61247C60.6805 2.43274 52.3537 5.1615 48.5383 11.9079L44.7596 18.5893C42.6991 22.2327 39.21 24.8495 35.1354 25.8073L27.918 27.5038C20.6595 29.21 15.7563 35.9887 16.4078 43.4165L17.2057 52.5128C17.5514 56.4548 16.3255 60.3737 13.7949 63.4159L7.99347 70.3904C3.36298 75.9571 3.37009 84.037 8.01036 89.5956L13.7767 96.503C16.3185 99.5478 17.5509 103.475 17.2043 107.426L16.4046 116.543C15.7545 123.955 20.6362 130.724 27.8748 132.446L35.1634 134.181C39.2214 135.147 42.6941 137.758 44.7475 141.389L48.5209 148.061C52.3436 154.821 60.6929 157.545 67.7664 154.341L73.8322 151.594C77.7536 149.818 82.249 149.812 86.1749 151.578L92.2513 154.311C99.3195 157.491 107.646 154.762 111.462 148.016L115.252 141.313C117.306 137.682 120.779 135.07 124.837 134.105L132.122 132.371C139.362 130.648 144.244 123.878 143.592 116.464L142.797 107.428C142.45 103.476 143.682 99.5471 146.225 96.5014L151.975 89.6127Z" fill="#F0D288"/>
           <path d="M55.9564 118.705L41.1423 100.411L44.3404 97.8209L46.0538 99.9368C45.9765 97.1772 47.0482 94.8982 49.2691 93.0998C51.6381 91.1814 54.0782 90.5922 56.5895 91.3322C58.1331 91.7852 59.8093 93.1285 61.6179 95.362L70.792 106.691L67.5939 109.281L58.4912 98.0399C57.2775 96.5411 56.0919 95.6522 54.9343 95.3731C53.5393 95.043 52.1755 95.4174 50.843 96.4965C49.4809 97.5995 48.7808 98.945 48.7428 100.533C48.6874 102.281 49.5759 104.286 51.4083 106.549L59.1545 116.115L55.9564 118.705Z" fill="#292E39"/>
           <path d="M85.5394 84.6034L89.3825 83.8999C89.7125 85.579 89.7547 87.175 89.5088 88.6878C89.0347 91.5534 87.5983 93.9574 85.1997 95.8997C82.7124 97.9139 79.923 98.8589 76.8316 98.7347C73.746 98.5571 70.9181 96.8814 68.3479 93.7075C66.0871 90.9157 65.0185 87.9613 65.1421 84.8444C65.2715 81.6741 66.6983 78.9859 69.4226 76.7798C72.5022 74.286 75.7311 73.5203 79.1091 74.4829C81.7807 75.2391 84.2144 77.0637 86.4101 79.9569L72.0632 91.5748C73.5921 93.4023 75.3832 94.4335 77.4365 94.6684C79.4899 94.9033 81.3309 94.3613 82.9596 93.0425C84.4105 91.8675 85.3121 90.4076 85.6642 88.6627C85.9222 87.2859 85.8806 85.9328 85.5394 84.6034ZM70.1435 88.7501L80.9814 79.9737C79.5488 78.7495 77.984 78.1189 76.2871 78.082C74.596 77.9916 73.0693 78.498 71.7072 79.601C70.3747 80.6801 69.559 82.0948 69.2604 83.8451C68.9675 85.542 69.2619 87.177 70.1435 88.7501Z" fill="#292E39"/>
           <path d="M80.7261 68.3563L84.2795 65.4788L99.8094 73.4857L94.3749 54.9681L111.314 64.1698L106.755 47.2786L110.308 44.4011L117.008 71.383L100.256 62.3216L105.637 80.591L80.7261 68.3563Z" fill="#292E39"/>
           </svg>
        </div>
-       <div class="radio__right">
+       <div class="radio__right flex">
         <h2 class="radio__title section__title">Будь с&nbsp;нами на&nbsp;одной волне!</h2>
         <svg class="radio__svg-wave" width="447" height="12" viewBox="0 0 447 12" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M1 1C9.24396 1 9.24396 11 17.4879 11C25.7319 11 25.7319 1 33.9758 1C42.2198 1 42.2198 11 50.4445 11C58.6887 11 58.6887 1 66.9131 1C75.1572 1 75.1572 11 83.3816 11C91.6257 11 91.6257 1 99.8693 1C108.113 1 108.113 11 116.358 11C124.601 11 124.601 1 132.845 1C141.089 1 141.089 11 149.334 11C157.577 11 157.577 1 165.821 1C174.065 1 174.065 11 182.309 11C190.553 11 190.553 1 198.797 1C207.041 1 207.041 11 215.266 11C223.51 11 223.51 1 231.734 1C239.978 1 239.978 11 248.203 11C256.447 11 256.447 1 264.69 1C272.935 1 272.935 11 281.179 11C289.422 11 289.422 1 297.666 1C305.911 1 305.911 11 314.155 11C322.398 11 322.398 1 330.642 1C338.886 1 338.886 11 347.13 11C355.374 11 355.374 1 363.618 1C371.862 1 371.862 11 380.087 11C388.331 11 388.331 1 396.556 1C404.8 1 404.8 11 413.024 11C421.268 11 421.268 1 429.512 1C437.756 1 437.756 11 446 11" stroke="#A1A6B4" stroke-miterlimit="10" stroke-linecap="square"/>
@@ -488,7 +499,8 @@
               <p class="radio__text">Итак, встречайте! Портативный радиоприёмник-колонка W-Wave 1.0&nbsp;xm. Тщательный подбор всех делатей, ручная сборка, качественный звук.
               Пока доступно только 60&nbsp;штук в&nbsp;3&nbsp;цветах, но&nbsp;мы&nbsp;активно трудимся над новыми партиями и&nbsp;дизайном. Спешите приобрести!</p>
               <p class="radio__price">2&nbsp;800&nbsp;₽</p>
-              <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+
+              <button class="radio__btn button btn-reset"><svg class="radio__svg-btn" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_113910_385)">
                 <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z" fill="#F0D288"/>
                 <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z" fill="#121723"/>
@@ -498,9 +510,9 @@
                 <rect x="0.5" width="20" height="20" rx="10" fill="white"/>
                 </clipPath>
                 </defs>
-                </svg>
-              <button class="radio__btn button btn-reset">Купить на&nbsp;Яндекс.Маркет</button>
+                </svg>Купить на&nbsp;Яндекс.Маркет</button>
        </div>
+      </div>
      </section>
 
      <section class="about">
