--- a/w-wave.html
+++ b/w-wave.html
@@ -142,11 +142,9 @@
                <h3 class="broadcast__subtitle">О людях и книгах</h3>
                <p class="broadcast__text">Анонсируется отдельно</p>
                <div class="broadcast__box flex">
-                <span class="broadcast__wrapper">
                <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
                 </svg></a>
-              </span>
                </div>
                 </div>
             </li>
@@ -156,10 +154,9 @@
               <h3 class="broadcast__subtitle">Графомания td</h3>
               <p class="broadcast__text">По понедельникам в 10:00</p>
               <div class="broadcast__box flex">
-              <a class="broadcast__link" href="#">Подробнее</a>
-                <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
-                  </svg>
+              <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
+                </svg></a>
                 </div>
                 </div>
             </li>
@@ -169,10 +166,9 @@
               <h3 class="broadcast__subtitle">Не Рим, не Троя</h3>
               <p class="broadcast__text">По вторникам в 12:00</p>
               <div class="broadcast__box flex">
-              <a class="broadcast__link" href="#">Подробнее</a>
-              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
-                </svg>
+                </svg></a>
                 </div>
                 </div>
             </li>
@@ -182,10 +178,9 @@
              <h3 class="broadcast__subtitle">Эрудит</h3>
              <p class="broadcast__text">По пятницам в 17:00</p>
              <div class="broadcast__box flex">
-             <a class="broadcast__link" href="#">Подробнее</a>
-             <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+             <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
-              </svg>
+              </svg></a>
               </div>
             </div>
             </li>
@@ -195,10 +190,9 @@
               <h3 class="broadcast__subtitle">Тонкости эпох</h3>
               <p class="broadcast__text">По субботам в 10:00</p>
               <div class="broadcast__box flex">
-              <a class="broadcast__link" href="#">Подробнее</a>
-              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
-                </svg>
+                </svg></a>
               </div>
                 </div>
             </li>
@@ -208,10 +202,9 @@
               <h3 class="broadcast__subtitle">Живые мысли</h3>
               <p class="broadcast__text">По воскресеньям в 15:30</p>
               <div class="broadcast__box flex">
-              <a class="broadcast__link" href="#">Подробнее</a>
-              <svg width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <a class="broadcast__link" href="#">Подробнее<svg class="broadcast__svg" width="28" height="12" viewBox="0 0 28 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24.3536 6.35355C24.5488 6.15829 24.5488 5.84171 24.3536 5.64645L21.1716 2.46447C20.9763 2.2692 20.6597 2.2692 20.4645 2.46447C20.2692 2.65973 20.2692 2.97631 20.4645 3.17157L23.2929 6L20.4645 8.82843C20.2692 9.02369 20.2692 9.34027 20.4645 9.53553C20.6597 9.7308 20.9763 9.7308 21.1716 9.53553L24.3536 6.35355ZM4 6.5H24V5.5H4V6.5Z"/>
-                </svg>
+                </svg></a>
                 </div>
                 </div>
             </li>
@@ -501,11 +494,10 @@
               <p class="radio__text">Итак, встречайте! Портативный радиоприёмник-колонка W-Wave 1.0&nbsp;xm. Тщательный подбор всех делатей, ручная сборка, качественный звук.
               Пока доступно только 60&nbsp;штук в&nbsp;3&nbsp;цветах, но&nbsp;мы&nbsp;активно трудимся над новыми партиями и&nbsp;дизайном. Спешите приобрести!</p>
               <p class="radio__price">2&nbsp;800&nbsp;₽</p>
-
               <button class="radio__btn button btn-reset"><svg class="radio__svg-btn" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_113910_385)">
-                <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z"/>
-                <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z"/>
+                <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z" fill="#F0D288"/>
+                <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z" fill="#121723"/>
                 </g>
                 <defs>
                 <clipPath id="clip0_113910_385">
@@ -560,9 +552,9 @@
           <form class="form" action="https://jsonplaceholder.typicode.com/posts" method="POST">
             <textarea class="form-textarea" name="message" placeholder="Что скажите?"></textarea>
             <div class="form-box flex">
-            <input class="form-input" type="text" required placeholder="Имя">
+            <input class="form-input" type="text" name="name" placeholder="Имя" required>
             <span class="form-mistake">Ошибка</span>
-            <input class="form-input" type="email" required placeholder="Email">
+            <input class="form-input" type="email" name="email" placeholder="Email" required>
           </div>
           <button class="form-btn button btn-reset" type="submit">Отправить</button>
           <label class="form-check flex">
