--- a/w-wave.html
+++ b/w-wave.html
@@ -494,47 +494,19 @@
               <p class="radio__text">Итак, встречайте! Портативный радиоприёмник-колонка W-Wave 1.0&nbsp;xm. Тщательный подбор всех делатей, ручная сборка, качественный звук.
               Пока доступно только 60&nbsp;штук в&nbsp;3&nbsp;цветах, но&nbsp;мы&nbsp;активно трудимся над новыми партиями и&nbsp;дизайном. Спешите приобрести!</p>
               <p class="radio__price">2&nbsp;800&nbsp;₽</p>
-              <button class="radio__btn button btn-reset">
-                <svg class="radio__svg-btn">
-              <symbol id="icon-1" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button class="radio__btn button btn-reset"><svg class="radio__svg-btn" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_113910_385)">
-                <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z" fill="#F0D288"/>
-                <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z" fill="#121723"/>
+                <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z"/>
+                <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z"/>
                 </g>
                 <defs>
                 <clipPath id="clip0_113910_385">
-                  <rect x="0.5" width="20" height="20" rx="10" fill="white"/>
+                <rect x="0.5" width="20" height="20" rx="10" fill="white"/>
                 </clipPath>
                 </defs>
-                </symbol>
-                <symbol viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_24531_3997)">
-                    <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z" fill="#121723"/>
-                    <path d="M17.4385 4.54403L13.7295 3.17688L8.3957 10.8638L8.92677 7.37522L6.02058 5.68231L0.67395 12.1142C0.924269 13.386 1.4102 14.5719 2.08387 15.624L5.27373 11.7712L4.09993 16.2963L7.73707 17.6272L13.1408 9.84652L11.9569 14.2959L14.9033 16.018L20.558 10.3176C20.5592 10.2536 20.5599 10.189 20.5599 10.1247C20.5599 8.78271 20.3017 7.50144 19.8329 6.32909L16.5482 9.65392L17.4385 4.54403Z" fill="#F0D288"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0_24531_3997">
-                      <rect x="0.5" width="20" height="20" rx="10" fill="white"/>
-                    </clipPath>
-                    </defs>
-                </symbol>
-                <symbol viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <g clip-path="url(#clip0_24531_4002)">
-                    <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z" fill="#121723"/>
-                    <path d="M17.4385 4.54403L13.7295 3.17688L8.3957 10.8638L8.92677 7.37522L6.02058 5.68231L0.67395 12.1142C0.924269 13.386 1.4102 14.5719 2.08387 15.624L5.27373 11.7712L4.09993 16.2963L7.73707 17.6272L13.1408 9.84652L11.9569 14.2959L14.9033 16.018L20.558 10.3176C20.5592 10.2536 20.5599 10.189 20.5599 10.1247C20.5599 8.78271 20.3017 7.50144 19.8329 6.32909L16.5482 9.65392L17.4385 4.54403Z" fill="#BB973E"/>
-                    </g>
-                    <defs>
-                    <clipPath id="clip0_24531_4002">
-                    <rect x="0.5" width="20" height="20" rx="10" fill="white"/>
-                    </clipPath>
-                    </defs>
-                </symbol></svg>
-                <svg width="21" height="20"><use xlink:href=""></use></svg>
-                <svg width="21" height="20"><use></use></svg>
-                <svg width="21" height="20"><use></use></svg>Купить на&nbsp;Яндекс.Маркет</button>
-       </div>
-      </div>
-     </section>
+                </svg>Купить на&nbsp;Яндекс.Маркет</button>
+          </div>
+        </section>
 
      <section class="about">
       <div class="about__container">
