aria-label added to button

--- a/w-wave.html
+++ b/w-wave.html
@@ -22,7 +22,7 @@
         <li class="nav__item"><a href="#О_нас" class="nav___link">О нас</a></li>
       </ul>
     </nav>
-    <button class="header__btn btn-reset button">
+    <button aria-label="Найти" class="header__btn btn-reset button">
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         <path d="M21 21L16.65 16.65" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -38,7 +38,7 @@
       <h1 class="hero__title section__title">Радио <span class="hero__heading">W-Wave</span></h1>
       <p class="hero__text section__text">Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разоворном жанре.
       Говорим о&nbsp;музыке, политике, истории, науке и&nbsp;культуре. Здесь, помимо прямого эфира&nbsp;&mdash; архив передач и&nbsp;многое другое:)</p>
-      <button class="hero__btn button btn-reset">Слушать эфир</button>
+      <button aria-label="Слушать эфир" class="hero__btn button btn-reset">Слушать эфир</button>
     </div>
     <div class="hero__right">
     </div>
@@ -130,7 +130,7 @@
         <div class="broadcast__left flex">
           <h2 class="broadcast__title section__title">Передачи</h2>
           <img class="broadcast__pic" src="/img/mic.jpg" alt="">
-            <button class="broadcast__btn button btn-reset">Архив</button>
+            <button aria-label="Архив" class="broadcast__btn button btn-reset">Архив</button>
             <p class="broadcast__descr">В&nbsp;архив попадают все передачи, которые вы&nbsp;пропустили! Enjoy:)</p>
         </div>
         <div class="broadcast__right">
@@ -224,7 +224,7 @@
           <h3 class="guest__subtitle">Ольга Мартынова</h3>
           <p class="guest__descr">Российский искусствовед, арт-критик, куратор выставок, дизайнер, кандидат культурологии.
             Арт-критик газеты &laquo;Коммерсантъ&raquo;. Ведёт активную блогерскую деятельность как куратор музея &laquo;Гараж&raquo;, коим является с&nbsp;2016&nbsp;года.</p>
-            <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+            <button aria-label="Эфиры с гостем" class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
           </div>
         </li>
         <li class="guest__item flex">
@@ -233,7 +233,7 @@
           <h3 class="guest__subtitle">Денис Гришин</h3>
           <p class="guest__descr">Однозначно, элементы политического процесса являются только методом политического участия и&nbsp;смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершённой неузнаваемости,
           из-за чего возрастает их&nbsp;статус бесполезности.</p>
-          <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+          <button aria-label="Эфиры с гостем" class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
         </div>
         </li>
         <li class="guest__item flex">
@@ -242,7 +242,7 @@
           <h3 class="guest__subtitle">Ольга Мартынова</h3>
           <p class="guest__descr">С&nbsp;другой стороны, высококачественный прототип будущего проекта выявляет срочную потребность дальнейших направлений развития.
             В&nbsp;рамках спецификации современных стандартов, реплицированные с&nbsp;зарубежных источников.</p>
-            <button class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
+            <button aria-label="Эфиры с гостем" class="guest__btn button btn-reset">Эфиры с&nbsp;гостем</button>
           </div>
         </li>
        </ul>
@@ -493,7 +493,7 @@
               <p class="radio__text">Итак, встречайте! Портативный радиоприёмник-колонка W-Wave 1.0&nbsp;xm. Тщательный подбор всех делатей, ручная сборка, качественный звук.
               Пока доступно только 60&nbsp;штук в&nbsp;3&nbsp;цветах, но&nbsp;мы&nbsp;активно трудимся над новыми партиями и&nbsp;дизайном. Спешите приобрести!</p>
               <p class="radio__price">2&nbsp;800&nbsp;₽</p>
-              <button class="radio__btn button btn-reset"><svg class="radio__svg-btn" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <button aria-label="Купить на Яндекс.Маркет" class="radio__btn button btn-reset"><svg class="radio__svg-btn" width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_113910_385)">
                 <path d="M10.5 20C16.0228 20 20.5 15.5228 20.5 9.99998C20.5 4.47714 16.0228 0 10.5 0C4.97724 0 0.5 4.47714 0.5 9.99998C0.5 15.5228 4.97724 20 10.5 20Z"/>
                 <path d="M17.4385 4.54391L13.7295 3.17676L8.3957 10.8637L8.92677 7.3751L6.02058 5.68219L0.67395 12.1141C0.924269 13.3858 1.4102 14.5718 2.08387 15.6239L5.27373 11.7711L4.09993 16.2962L7.73707 17.6271L13.1408 9.8464L11.9569 14.2958L14.9033 16.0179L20.558 10.3174C20.5592 10.2534 20.5599 10.1889 20.5599 10.1246C20.5599 8.78258 20.3017 7.50132 19.8329 6.32896L16.5482 9.6538L17.4385 4.54391Z"/>
@@ -554,7 +554,7 @@
             <span class="form-mistake">Ошибка</span>
             <input class="form-input" type="email" name="email" placeholder="Email" required>
           </div>
-          <button class="form-btn button btn-reset" type="submit">Отправить</button>
+          <button aria-label="Отправить" class="form-btn button btn-reset" type="submit">Отправить</button>
           <label class="form-check flex">
             <input class="form-checkbox-custom" type="checkbox" required>
             <span class="form-text">Согласен на&nbsp;обработку персональных данных</span>
