--- a/w-wave.html
+++ b/w-wave.html
@@ -13,7 +13,7 @@
   <header class="header">
    <div class="header__container flex">
     <a class="header__logo" href="#"><img src="/img/logo.svg" alt="Логотип Radio W-Wave"></a>
-    <nav class="header-nav">
+    <nav class="header-nav flex">
       <ul class="header__list flex list-reset">
         <li class="nav__item"><a href="#Подкасты" class="nav___link">Подкасты</a></li>
         <li class="nav__item"><a href="#Передачи" class="nav___link">Передачи</a></li>
@@ -518,30 +518,38 @@
           Это можно сделать либо написав нам в&nbsp;форме ниже, либо кликнув на&nbsp;наши соцсети в&nbsp;подвале сайта. Спасибо! Услышимся!:)</p>
         </div>
         <div class="about__svg">
-          <svg width="446" height="292" viewBox="0 0 446 292" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.5" d="M103.536 1C46.9066 1 1 15.5154 1 33.4211C1 51.3268 46.9066 65.8423 103.536 65.8423C135.272 65.8423 161 59.6977 161 52.118C161 44.5383 135.272 38.3937 103.536 38.3937C46.9066 38.3937 1 52.9091 1 70.8148C1 88.7206 46.9066 103.236 103.536 103.236C135.272 103.236 161 97.0916 161 89.5117C161 81.9319 135.272 75.7874 103.536 75.7874C46.9066 75.7874 1 90.3919 1 108.407C1 126.423 46.9066 141.028 103.536 141.028C135.272 141.028 161 134.883 161 127.303C161 119.723 135.272 113.579 103.536 113.579C46.9066 113.579 1 128.094 1 146C1 163.906 46.9066 178.421 103.536 178.421C135.272 178.421 161 172.277 161 164.697C161 157.117 135.272 150.972 103.536 150.972C46.9066 150.972 1 165.488 1 183.394C1 201.3 46.9066 215.815 103.536 215.815C135.272 215.815 161 209.67 161 202.091C161 194.511 135.272 188.366 103.536 188.366C46.9066 188.366 1 202.882 1 220.787C1 238.693 46.9066 253.209 103.536 253.209C135.272 253.209 161 247.064 161 239.484C161 231.905 135.272 225.76 103.536 225.76C46.9066 225.76 1 240.364 1 258.38C1 276.395 46.9066 291 103.536 291" stroke="#A1A6B4" stroke-linecap="round"/>
-            <path opacity="0.5" d="M318.5 19L318.525 146.375L367.292 28.7053L318.571 146.394L408.656 56.3439L318.606 146.429L436.295 97.7076L318.625 146.475L446 146.5L318.625 146.525L436.295 195.292L318.606 146.571L408.656 236.656L318.571 146.606L367.292 264.295L318.525 146.625L318.5 274L318.475 146.625L269.708 264.295L318.429 146.606L228.344 236.656L318.394 146.571L200.705 195.292L318.375 146.525L191 146.5L318.375 146.475L200.705 97.7076L318.394 146.429L228.344 56.3439L318.429 146.394L269.708 28.7053L318.475 146.375L318.5 19Z" stroke="#A1A6B4"/>
-            </svg>
           </div>
       </div>
         <ul class="about__list flex list-reset">
             <li class="about__item">
-              <img class="about__img" src="/img/image_1.jpg" alt="На фото Дмитрий Гутенберг">
+              <picture>
+                <source media="(max-width: 1024px)" srcset="https://i.ibb.co/tqd3VPv/image-1-1024.jpg">
+                <img class="about__img" src="/img/image_1.jpg" alt="На фото Дмитрий Гутенберг">
+              </picture>
               <h3 class="about__subtitle">Дмитрий Гутенберг</h3>
               <p class="about__descr">Эксперт (ну, почти) по&nbsp;всем вопросам (почти)</p>
             </li>
             <li class="about__item">
+              <picture>
+                <source media="(max-width: 1024px)" srcset="https://i.ibb.co/Q6pdV7B/image-2-1024.jpg">
               <img class="about__img" src="/img/image_2.jpg" alt="На фото Анна Васильева">
+            </picture>
               <h3 class="about__subtitle">Анна Васильева</h3>
               <p class="about__descr">Как я&nbsp;здесь оказалась? А&nbsp;главное&nbsp;&mdash; зачем?</p>
             </li>
             <li class="about__item">
+              <picture>
+                <source media="(max-width: 1024px)" srcset="https://i.ibb.co/HB9qBpV/image-3-1024.jpg">
               <img class="about__img" src="/img/image_3.jpg" alt="На фото Пётр Дмитриевский">
+            </picture>
               <h3 class="about__subtitle">Пётр Дмитриевский</h3>
               <p class="about__descr">Господа! Внимание! Благодарю за&nbsp;внимание!</p>
             </li>
             <li class="about__item">
+              <picture>
+                <source media="(max-width: 1024px)" srcset="https://i.ibb.co/XD47qJQ/image-4-1024.jpg">
               <img class="about__img" src="/img/image_4.jpg" alt="На фото Татьяна Флеганова">
+            </picture>
               <h3 class="about__subtitle">Татьяна Флеганова</h3>
               <p class="about__descr">Одна я&nbsp;в&nbsp;пальто стою красивая, а&nbsp;вокруг...</p>
             </li>
@@ -606,15 +614,15 @@
     <div class="footer__right flex">
       <nav class="footer__nav nav">
         <ul class="footer__list flex list-reset">
-          <li class="nav__item"><a class="nav__link" href="#Подкасты" target="_blank">Подкасты</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Передачи" target="_blank">Передачи</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Гости" target="_blank">Гости</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Плейлисты" target="_blank">Плейлисты</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Сетка" target="_blank">Сетка</a></li>
-          <li class="nav__item"><a class="nav__link" href="#О_нас" target="_blank">О нас</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Новости" target="_blank">Новости</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Блоги" target="_blank">Блоги</a></li>
-          <li class="nav__item"><a class="nav__link" href="#Топы" target="_blank">Топы</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Подкасты" target="_blank">Подкасты</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Передачи" target="_blank">Передачи</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Гости" target="_blank">Гости</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Плейлисты" target="_blank">Плейлисты</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Сетка" target="_blank">Сетка</a></li>
+          <li class="footer__item"><a class="footer__link" href="#О_нас" target="_blank">О нас</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Новости" target="_blank">Новости</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Блоги" target="_blank">Блоги</a></li>
+          <li class="footer__item"><a class="footer__link" href="#Топы" target="_blank">Топы</a></li>
         </ul>
       </nav>
     </div>
