--- a/w-wave.html
+++ b/w-wave.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
    <div class="header__container flex">
-    <a class="header__logo" href="#"><img src="/img/logo.svg" alt="Логотип Radio W-Wave"></a>
+    <a class="header__logo" href="#"><img class="header__img-logo" src="/img/logo.svg" alt="Логотип Radio W-Wave"></a>
     <nav class="header-nav flex">
       <ul class="header__list flex list-reset">
         <li class="nav__item"><a href="#Подкасты" class="nav___link">Подкасты</a></li>
@@ -22,6 +22,7 @@
         <li class="nav__item"><a href="#О_нас" class="nav___link">О нас</a></li>
       </ul>
     </nav>
+    <div class="header__wrapper flex">
     <button class="burger btn-reset">
       <span class="burger__line"></span>
       <span class="burger__line"></span>
@@ -33,6 +34,7 @@
         <path d="M21 21L16.65 16.65" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </button>
+    </div>
    </div>
   </header>
 
@@ -41,7 +43,7 @@
       <div class="hero__container flex">
       <div class="hero__left">
       <h1 class="hero__title section__title">Радио <span class="hero__heading">W-Wave</span></h1>
-      <p class="hero__text section__text">Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разоворном жанре.
+      <p class="hero__text section__text">Привет, на&nbsp;связи W-Wave! Раньше мы&nbsp;были изданием, а&nbsp;теперь пробуем себя в&nbsp;разговорном жанре.
       Говорим о&nbsp;музыке, политике, истории, науке и&nbsp;культуре. Здесь, помимо прямого эфира&nbsp;&mdash; архив передач и&nbsp;многое другое:)</p>
       <button aria-label="Слушать эфир" class="hero__btn button btn-reset">Слушать эфир</button>
     </div>
